cabal-version:      3.0
name:               repl-alliance
version:            0.1.0.0
synopsis:           Currated set of plugins for REPL based development
description:        Currated set of plugins for REPL based development
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  ReplAlliance
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      ghc,
                      pinned-warnings,
                      auto-extract,
                      auto-split,
                      auto-import,
                      monoidal-plugins
    hs-source-dirs:   src
    default-language: GHC2021
