cabal-version:      3.0
name:               repl-alliance
version:            0.1.0.0
synopsis:           Currated set of plugins for REPL based development
description:        Currated set of plugins for REPL based development
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  ReplAlliance
                      ShowWarnings
                      AutoSplit.Pattern
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      ghc >= 9.6 && < 9.13,
                      pinned-warnings,
                      auto-extract,
                      auto-export,
                      auto-split,
                      auto-import,
                      monoidal-plugins
    hs-source-dirs:   src
    default-language: GHC2021

-- executable play
--   import:           warnings
--   build-depends:
--     repl-alliance,
--     base
--   hs-source-dirs: play
--   default-language: GHC2021
--   ghc-options: -fplugin ReplAlliance
--   main-is: Main.hs
